# django-snapshots

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  refactor.md
.github/: CODEOWNERS
.github/workflows/: bandit.yml  lint.yml  release.yml  scorecard.yml  test.yml  zizmor.yml
doc/source/: changelog.rst  conf.py  index.rst  refs.rst
doc/source/_static/: style.css
doc/source/explanation/: architecture.rst  index.rst  storage-protocols.rst
doc/source/how-to/: configure-storage.rst  custom-connector.rst  index.rst
doc/source/reference/: connectors.rst  dataclasses.rst  exceptions.rst  index.rst  settings.rst  storage.rst
doc/source/reference/commands/: backup.rst  index.rst  restore.rst
doc/source/tutorials/: getting-started.rst  index.rst
doc/superpowers/plans/: 2026-03-13-plan-1-core-foundation.md  2026-03-13-plan-1b-docs-and-behavior-tests.md  2026-03-14-plan-2-export-system.md  2026-03-15-plan-3-import-system.md  2026-03-15-plan-4-core-commands.md  2026-03-16-plan-6a-rename.md  2026-03-16-plan-6b-init-cleanup.md  2026-03-16-plan-6c-asyncer.md  2026-03-16-plan-6d-directory-protocol-pluggable-finalize.md
doc/superpowers/specs/: 2026-03-13-django-snapshots-design.md  2026-03-14-plan-3-import-system-design.md  2026-03-16-refactor-design.md
src/django_snapshots/: __init__.py  _pip.py  apps.py  completers.py  defines.py  exceptions.py  manifest.py  parsers.py  settings.py  utils.py
src/django_snapshots/artifacts/: __init__.py  directory.py  protocols.py
src/django_snapshots/backup/: apps.py
src/django_snapshots/backup/artifacts/: __init__.py  media.py
src/django_snapshots/backup/management/plugins/: snapshots.py
src/django_snapshots/connectors/: __init__.py  auto.py  dumpdata.py  mysql.py  postgres.py  protocols.py  sqlite.py
src/django_snapshots/export/: apps.py
src/django_snapshots/export/artifacts/: __init__.py  database.py  environment.py  media.py
src/django_snapshots/export/management/plugins/: snapshots.py
src/django_snapshots/import/: apps.py
src/django_snapshots/import/artifacts/: __init__.py  media.py
src/django_snapshots/import/management/plugins/: snapshots.py
src/django_snapshots/management/commands/: snapshots.py
src/django_snapshots/restore/: apps.py
src/django_snapshots/restore/artifacts/: __init__.py  database.py  environment.py  media.py
src/django_snapshots/restore/management/plugins/: snapshots.py
src/django_snapshots/storage/: __init__.py  django_storage.py  local.py  protocols.py
tests/: conftest.py  settings.py  test.py  test_behaviors.py  test_core_commands.py  test_directory_artifacts.py  test_exceptions.py  test_manifest.py  test_pluggable_finalize.py  test_settings.py
tests/backup/: test_backup_command.py  test_exporters.py
tests/connectors/: test_auto.py  test_dumpdata.py  test_mysql.py  test_postgres.py  test_sqlite.py
tests/export/: test_export_command.py  test_exporters.py
tests/restore/: test_importers.py  test_restore_command.py
tests/storage/: test_django_storage.py  test_local.py  test_protocols.py
tests/test_import/: test_import_command.py  test_importers.py
