[project]
name = "django-snapshots"
version = "0.0.0a0"
description = "A generic and pluggable backup and restore management utility for Django."
requires-python = ">=3.10,<4.0"
authors = [
  {name = "Brian Kohan", email = "bckohan@gmail.com"},
]
license = "MIT"
license-files = [ "LICENSE" ]

readme = "README.md"
repository = "https://github.com/bckohan/django-snapshots"
homepage = "https://django-snapshots.readthedocs.io"
keywords = ["django"]
dependencies = [
    "asyncer>=0.0.8",
    "django>=4.2,<6.1",
    "django-typer>=3.6.4",
    "tqdm>=4.0.0",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 1 - Planning",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",

    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
conflicts = [
  [
    { group = "dj42" },
    { group = "dj52" },
    { group = "dj60" },
  ],
  [
    { group = "mysqlclient2x" },
    { group = "mysqlclient14" },
  ],
  [
    { group = "psycopg2" },
    { group = "psycopg3" },
  ],
  [
    { group = "cx_oracle" },
    { group = "oracledb" },
  ],
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_snapshots"]

[project.urls]
"Homepage"      = "https://django-snapshots.readthedocs.io"
"Documentation" = "https://django-snapshots.readthedocs.io"
"Repository"    = "https://github.com/bckohan/django-snapshots"
"Issues"        = "https://github.com/bckohan/django-snapshots/issues"
"Changelog"     = "https://django-snapshots.readthedocs.io/en/latest/changelog.html"
"Code_of_Conduct" = "https://github.com/bckohan/django-snapshots/blob/main/CODE_OF_CONDUCT.md"


[dependency-groups]
docs = [
    "doc8>=1.1.2",
    "furo>=2024.8.6",
    "readme-renderer[md]>=44.0",
    "sphinx>=8.0.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-django>=2.5",
    "sphinxcontrib-typer[pdf,html]>=0.8.0",
]
psycopg2      = ["psycopg2>=2.9.10"]
psycopg3      = ["psycopg"]
mysqlclient14 = ["mysqlclient==1.4.3"]
mysqlclient2x = ["mysqlclient>=2.2.8"]
cx_oracle     = ["cx-oracle>=8.3.0"]
oracledb      = ["oracledb>=2.3.0"]
dj42          = ["Django~=4.2; python_version < '3.13'"]
dj52          = ["Django~=5.2"]
dj60          = ["Django~=6.0; python_version >= '3.12'"]
typing = [
    "pyright>=1.1.390",
    "mypy>=1.19.1",
    "django-stubs[compatible-mypy]>=5.1.3",
    "django-stubs-ext>=5.1.3",
]
lint = [
    "ruff>=0.15.0",
    "readme-renderer[md]>=43.0",
    "doc8>=1.1.2",
    "bandit[toml,sarif]>=1.7.10"
]
precommit = ["pre-commit>=3.5.0"]
coverage  = ["coverage[toml]>=7.6.1"]
test = [
    { include-group = "coverage" },
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.0"

]
dev = [
    { include-group = "typing" },
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "precommit" },
    "packaging>=24.2",
    "tomlkit>=0.13.3",
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
mypy_path = ["src"]
packages = ["django_snapshots"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src/django_snapshots"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportDuplicateImport = true

[tool.doc8]
max-line-length = 100
sphinx = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "test*.py"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"

markers = [
    "ui: mark test as a UI/browser test requiring Playwright",
    "postgres: mark test as requiring PostgreSQL (set RDBMS=postgres)",
    "mysql: mark test as requiring MySQL or MariaDB (set RDBMS=mysql or RDBMS=mariadb)",
]
addopts = [
    "--strict-markers",
    "--cov=django_snapshots",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
]

[tool.coverage.run]
branch = true
source = ["django_snapshots"]
concurrency = ["thread", "multiprocessing"]
parallel = true
relative_files = true
command_line = "-m pytest --cov=django_snapshots"

[tool.coverage.paths]
source = ["django_snapshots"]

[tool.ruff]
line-length = 88
exclude = ["doc", "dist"]
target-version = "py310"

[tool.ruff.lint]
exclude = ["tests/**/*"]

[tool.bandit]
targets = ["src"]
exclude_dirs = [
    "./tests",
    "./.venv",
    "./doc",
]

skips = [
    "B101",  # assert_used - assertions are fine in tests and Django code
    "B110",  # Try, Except, Pass detected - these are intentional
    "B404",  # import subprocess - required for pg_dump/psql/mysqldump/mysql
    "B603",  # subprocess_without_shell_equals_true - cmd is a list from trusted config, not user input
]
